--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e0f7fa;
             text-align: center;
         }
         .container {
@@ -21,14 +21,14 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #333;
+            color: #00796b;
         }
         p {
             font-size: 18px;
-            color: #666;
+            color: #555;
         }
         nav {
-            background: #333;
+            background: #00796b;
             padding: 10px;
         }
         nav a {
@@ -39,6 +39,23 @@
         }
         nav a:hover {
             text-decoration: underline;
+        }
+        .warning {
+            background-color: #ffccbc;
+            padding: 15px;
+            margin-top: 20px;
+            border-radius: 5px;
+            font-weight: bold;
+            color: #d32f2f;
+        }
+        .image-section {
+            margin-top: 20px;
+        }
+        img {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -52,6 +69,14 @@
         <h1>Height Myths Debunked</h1>
         <p>Height is primarily determined by genetics, and most "height-increasing" methods online are myths.</p>
         <p>Eating certain foods or doing specific exercises will not change your genetic potential.</p>
+        
+        <div class="image-section">
+            <img src="https://via.placeholder.com/500" alt="Height Myth Image">
+        </div>
+        
+        <div class="warning">
+            ⚠️ Don't listen to online rubbish! If someone is not a doctor, they have no authority to tell you how to grow taller.
+        </div>
     </div>
 </body>
 </html>
